--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,5 @@
 #root {
     height: 100vh;
     display: flex;
-    background-color: burlywood ;
-}
-
-.main_2 {
-    border: 1px;
-    border-color: red;
+    background-color: ivory ;
 }
